# parengus-code

./: .gitignore  .gitmodules  ASSET_SYSTEM.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUTURE_WORK.md  README.md  copy-exe-debug.ps1
.claude/: settings.json  settings.local.json
.githooks/: post-checkout  post-commit  post-merge  pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/rust-setup/: action.yml
.github/workflows/: ci.yml  pr-title.yml
.tasks/: CONVENTIONS.md  index.md  t001-shader-ir.md  t002-xtask-smart-rebuild.md  t003-pbr-shading.md  t004-tui.md  t005.md  t006-rendergraph-executor-split.md  t006.md  t007-frames-in-flight.md  t007.md  t008-rendergraph-compile-phase.md  t008.md  t009-executor-resource-management.md  t009.md  t010.md  t011-resource-granularity.md  t011.md  t012-upload-system.md  t012.md  t013.md  t014-descriptor-model.md  t014.md  t015-shader-binding-model.md  t015.md  t016.md  t017-deferred-decisions.md  t017.md  t018-future-features.md  t018.md  t019-resource-state-tracker.md  t020-generate-slang-metadata.md  t021-emit-spirv1.md
asset-compiler/: Cargo.toml
asset-compiler/src/: image.rs  main.rs  mesh.rs
asset-loader/: Cargo.toml
asset-loader/src/: lib.rs
asset-pipeline/: Cargo.toml
asset-pipeline/src/: lib.rs
asset-shared/: Cargo.toml
asset-shared/src/: lib.rs
assets/: Duck.gltf  manifest.toml
assets/shaders/: phoenix.slang  shader.slang
docs/: SHADER_IR.md  asset-formats.md
parengus-tracing/: Cargo.toml
parengus-tracing/src/: lib.rs
phoenix/: Cargo.toml  assets.toml
phoenix/src/: assets.toml  main.rs  phoenix.rs
rgpu/: Cargo.toml
rgpu-vk/: Cargo.toml  README.md
rgpu-vk/src/: buffer.rs  command.rs  descriptor.rs  device.rs  image.rs  instance.rs  lib.rs  marker.rs  memory.rs  pipeline.rs  renderpass.rs  sampler.rs  shader.rs  surface.rs  swapchain.rs  sync.rs
rgpu/src/: buffer.rs  command.rs  device.rs  instance.rs  lib.rs  log.rs  pipeline.rs  shader.rs  surface.rs  swapchain.rs  sync.rs
samp-app/: Cargo.toml  compile-samp-app-shaders-debug.ps1  copy-samp-app-exe-debug.ps1
samp-app-noext/: Cargo.toml
samp-app-noext/src/: main.rs
samp-app/shaders/: shader.slang
samp-app/src/: assets.toml  main.rs
tools/: check_axis_mapping.py  inspect_pmesh.py
xtask/: Cargo.toml
xtask/src/: assets.rs  main.rs
