[workspace]
members = [
    "asset-compiler",
    "asset-loader",
    "asset-pipeline",
    "asset-shared",
    "phoenix",
    "rgpu-vk",
    "samp-app",
    "samp-app-noext",
    "xtask",
]
default-members = [
    "asset-loader",
    "phoenix",
    "rgpu-vk",
    "samp-app",
    "samp-app-noext",
]
resolver = "3"
