[package]
name = "asset-compiler"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
asset-pipeline = { path = "../asset-pipeline" }
asset-shared = { path = "../asset-shared" }
basis-universal = "0.3"
clap = { version = "4", features = ["derive"] }
bevy_mikktspace = "1.0"
gltf = "1"
image = "0.25"
lz4_flex = { version = "0.12", features = ["frame"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
parengus-tracing = { path = "../parengus-tracing" }
