[package]
name = "parengus-tracing"
version = "0.1.0"
edition = "2024"

[lib]
name = "parengus_tracing"
path = "src/lib.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
supports-color = "3"
