[package]
name = "samp-app"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "6.0.0"
eyre = "0.6.12"
rgpu = { version = "0.1.0", path = "../rgpu" }
strum = "0.27.2"
strum_macros = "0.27.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
winit = "0.30.12"
