[package]
name = "samp-app"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
asset-loader = { path = "../asset-loader" }
asset-shared = { path = "../asset-shared" }
bytemuck = { version = "1.25.0", features = ["derive"] }
clap = { version = "4.6", features = ["derive"] }
directories = "6.0.0"
eyre = "0.6.12"
rgpu-vk = { version = "0.1.0", path = "../rgpu-vk" }
tracing = "0.1.44"
supports-color = "3"
tracing-subscriber = "0.3.22"
vek = { version = "0.17.2", features = ["bytemuck"] }
winit = "0.30.13"
parengus-tracing = { path = "../parengus-tracing" }
